# redis-model-store

./: .gitignore  README.md  conftest.py  pyproject.toml  scripts.py
.github/workflows/: lint.yml  release-drafter.yaml  release-drafter.yml  release.yaml  release.yml  run_tests.yaml  run_tests.yml
docs/: redis_model_store.ipynb
model_store/: registry.py  serialize.py  shard_manager.py  store.py  utils.py
redis_model_store/: __init__.py  shard_manager.py  store.py  utils.py
tests/: test_serialize.py  test_shard_manager.py  test_store.py  test_utils.py
